# openvanilla

./: .gitignore  AUTHORS.txt  BuildMacPackages.sh  CIN-Defaults.cpp  CIN-Defaults.h  CinHowTo.markdown  GenericCandidateList.h  Info.plist  InputMethodApp_Prefix.pch  LICENSE.txt  LVIMSessionController.h  LVIMSessionController.m  LVIMSessionController.mm  Makefile  Makefile.Darwin  Makefile.FreeBSD  Makefile.Generic  Makefile.Linux  Makefile.Linux.WillNotWork  Makefile.OSX  Makefile.deprecated  Modules.sln  OVCINSQ.cpp  OVCINSQ.h  OVCINSQInfo.cpp  OVCINSQInfo.h  OVCandidateList.cpp  OVDayi.mm  OVFileHandler.cpp  OVIME.VC8.sln  OVIME.sln  OVIMExample.cpp  OVIMGenericSQ.cpp  OVIMGenericSQ.h  OVIMGenericSQ.vcproj  OVLoadable.h  OVLoadble.h  OVOFReverseLookup.cpp  OVOFReverseLookup.h  OVPreferences.sln  (+18 more)
Loaders/SCIM/: DummyLoader.h  Makefile.am  Makefile.in  OVPhoneticLib.h  aclocal.m4  configure  configure.ac  libtool  mkinstalldirs  regen.sh  scim_chewing_imengine.cpp
Modules/: Makefile  Makefile.ExtraModules  Makefile.am  Modules.sln  OpenVanilla.framework  REFACTORING.txt  configure.ac
Modules/Array/: LegacyOVFrameworkWrapper.h  OVIMArray.cpp  OVIMArray.h  OVIMArrayContext.cpp  OVIMArrayContext.h  OVIMArrayKeySequence.h  array.cpp  array.h
Modules/AssociatedPhrases/: OVAFAssociatedPhrases.cpp  OVAFAssociatedPhrases.h  OVAFAssociatedPhrasesContext.cpp  OVAFAssociatedPhrasesContext.h
Modules/Big5Code/: OVIMBig5Code.cpp  OVIMBig5Code.h  OVIMBig5CodeContext.h
Modules/IMExample/: IMExample.cpp  Makefile
Modules/Mk/: ov.module.debug.mk  ov.module.mk  ov.module.w32.mk
Modules/Modules.xcodeproj/: project.pbxproj  zonble.pbxuser
Modules/OVIMArray/: ArrayKeySequence.h  ArrayShortCode.cin  ArraySpecial.cin  Info.plist  Makefile  OVIMArray-Info.plist  OVIMArray.cpp  OVIMArray.h  OVIMArray.vcproj  array-shortcode.cin  array-special.cin  array30.cin  build.sh  make.bat
Modules/OVIMAutoPhonetic/: AutoPhonetic.h  GrammarUnit.h  Makefile  OVIMAutoPhonetic.cpp  PhoneticService.cpp  PhoneticSyllable.cpp  README  punctuation.cin  tsi-sqlconvert.pl
Modules/OVIMBig5/: Big5ToUnicodeTable.cpp  Info.plist  Makefile  OVIMBig5-Info.plist  OVIMBig5.cpp  OVIMBig5_Prefix.pch  README.txt  make.bat
Modules/OVIMBoshiamy/: Info.plist  Makefile  OVIMBoshiamy.cpp  OVIMBoshiamy_Prefix.pch  OVIMGenericSQLite.cpp  README  cin-sqlconvert.pl  mkpackage.sh
Modules/OVIMChewing/: ChangeLog  Config  Makefile  OVIMChewing.cpp  README  libchewing.lib  make.bat
Modules/OVIMChewing03/: Makefile  mkpackage.sh
Modules/OVIMChewingStatic/: Chewingpp.cpp  InfoPlist.strings  Makefile  OVIMChewingStatic.cpp  OVIMChewing_prefix.pch  make.sh
Modules/OVIMEsperanto/: Info.plist  Makefile  OVIMEsperanto-Info.plist  OVIMEsperanto.cpp  OVIMEsperanto.sln  OVIMEsperanto.vcproj  make.bat
Modules/OVIMExample/: IMExample.cpp  Makefile  OVIMExample.cpp
Modules/OVIMGeneric/: AddPlist.cpp  CIN-Defaults.cpp  CIN-Defaults.h  CinList.cpp  Makefile  Makefile.AddPlist  Makefile.am  Makefile.w32  OVIMGeneric.VC8.vcproj  OVIMGeneric.cpp  OVIMGeneric.h  OVIMGeneric.vcproj  OVIMXcin.cpp  OVIMXcin.h  XcinCinList.cpp  XcinCinList.h  cj.cin  dayi3.cin  ehq.cin  iroha.cin  pinyin.cin  simplex.cin  wubizixing.cin
Modules/OVIMGenericSQLite/: Makefile  OVIMGenericSQLite.cpp  OVIMGenericSQLite.vcproj  README.txt  cin-sqlconvert.pl  cj.cin  ehq-symbols.cin  ehq.cin  make.bat
Modules/OVIMKeypadExample/: KPController.mm  OVIMKeypadExample-Info.plist
Modules/OVIMPOJ/: OVIMPOJ-Holo.cpp  OVIMPOJ-Holo.h  OVIMPOJ.plist
Modules/OVIMPOJ-Holo/: Makefile  Makefile.w32  OVDeprecated.h  OVIMPOJ-Holo.cpp  OVIMPOJ-Holo.h  OVIMPOJ-Holo.vcproj  OVIMPOJ.h  OVIMPOJ.mm  POJ-Holo.cpp  POJ-Holo.h  POJKeySeq.cpp  VXCIN.h  VXCIN.mm  VXCandidate.h  VXCandidate.mm  VXUtility.h  make.bat  poj-holo.cin
Modules/OVIMPhonetic/: .gitignore  Ext-Info.plist  Info.plist  Makefile  Makefile.SQLite  Makefile.am  OVIMPhonetic-Info.plist  OVIMPhonetic.cpp  OVIMPhoneticSQLite.cpp  OVIMPhoneticStatic.cpp  OVIMPhoneticStatic.vcproj  OVIMPhonetic_Prefix.pch  OVPhoneticData.c  OVPhoneticLib.cpp  OVPhoneticLib.h  README.txt  bpmf-ext.cin  bpmf-schema.txt  bpmf-sqlconvert.pl  bpmf.cin  convert-phonedata.pl  maketable.pl  phonetic.cin  punctuation.cin  punctuations.cin  vanillaphone.cpp
Modules/OVIMPhoneticNew/: OVIMPhoneticSQLite.cpp  OVPhoneticLib.cpp  OVPhoneticLib.h  OVSQLite3.h  bpmf-sqlconvert.pl  punctuation.cin
Modules/OVIMPhoneticOld/: Makefile  OVIMPhonetic.cpp  vanillaphone.cpp
Modules/OVIMPhoneticSQLite/: Makefile.static  OVIMPhoneticSQLite.cpp  OVIMPhoneticStatic.cpp  convert-phonedata.pl
Modules/OVIMPython/: Makefile  Note4building.txt  OVIMPython.py  OVIMPythonBased.cpp  OVIMPython_wrap.cpp  OVIMPython_wrap.h  PYIM.py  _PYOVHelper.py
Modules/OVIMRoman/: Info.plist  Makefile  OVIMRoman-Info.plist  OVIMRoman.cpp  OVIMRoman_Prefix.pch  make.bat
Modules/OVIMRomanNew/: Makefile  OVIMRomanNew.cpp  OVIMRomanNew.h  OVIMRomanNew.vcproj  README  README.txt  README4SpellChecker  ReadMe.txt  aspell.h  cin-sqlconvert.pl  deploy-hunspell.bat  dict.txt  imtables-schema.txt  make.bat  readme
Modules/OVIMSingle/: CIN-Defaults.cpp  CIN-Defaults.h  Makefile.am  OVIMSingle.cpp  OVIMSingle.h  configure.ac
Modules/OVIMSpaceChewing/: Chewingpp.cpp  Chewingpp.h  Info.plist  LICENSE-zh-Hant.txt  LICENSE.txt  Makefile  Makefile.bundle  OVIMChewingPinyin.cpp  OVIMChewingStatic.cpp  OVIMSpaceChewing-Info.plist  OVIMSpaceChewing.cpp  libchewing_version.h
Modules/OVIMSpaceChewing0.3/: Makefile  OVIMSpaceChewing.cpp  README.txt
Modules/OVIMSpaceChewingOld/: Makefile  README.txt
Modules/OVIMTibetan/: Info.plist  Makefile  OVIMTibetan-Info.plist  OVIMTibetan.cpp  OVIMTibetan.h  OVIMTibetan.vcproj  OVIMTibetan_Prefix.pch
Modules/OVIMTobacco/: Makefile  OVIMTobacco.cpp  OVIMTobacco.sln  OVIMTobacco.vcproj  bpmf-Hsu.cin  bpmf.cin  bpmfReplace.h  bpmf_punctuation.cin  cin-sqlconvert.pl  cj.cin  dayi3.cin  iasl.lm  imtables-schema.txt  make.bat  patch-tsi.src  pinyinbig5.cin  poj-holo.cin  poj.cin  punctuation.lm  punctuation.src  punctuation.txt  single-char-word_filter.pl  (+5 more)
(+3758 files in other folders)
