AUTOMAKE_OPTIONS=foreign

noinst_LTLIBRARIES = libsharedsource.la
libsharedsource_la_SOURCES = OVCIN.cpp OVCINInfo.cpp OVCandidateList.cpp OVFileHandler.cpp OVPhoneticLib.cpp OVStringToolKit.cpp
libsharedsource_la_CPPFLAGS = -I$(top_srcdir)/SharedHeaders/

#libsharedsource_la_LDFLAGS = -lltdl 
#libsharedsource_la_LIBADD = 

